Fixed Layout issue on blogs page

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1158,7 +1158,6 @@ img {
 
 .slide__content {
   position: absolute;
-  z-index: 10;
   bottom: 0;
   left: 0;
   width: 100%;
